--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3.5"
+        android:layout_weight="4"
         android:elevation="8dp"
         android:gravity="bottom">
 
@@ -33,8 +33,7 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginHorizontal="32dp"
             android:src="@drawable/bookvan_logo_full" />
 
     </RelativeLayout>
@@ -42,7 +41,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6.5"
+        android:layout_weight="6"
         android:background="#FFFFFF"
         android:scrollbars="none">
 
@@ -62,7 +61,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputEmail"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -84,7 +83,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputPassword"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -116,6 +115,18 @@
                     android:text="@string/button_label_login"
                     app:icon="@drawable/ic_btn_login" />
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnRegister"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/lato"
+                    android:text="Create Account"
+                    app:icon="@drawable/ic_btn_register"
+                    app:strokeColor="@color/colorPrimary"
+                    app:strokeWidth="1dp" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -123,9 +134,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="8dp"
                 android:orientation="horizontal"
                 android:weightSum="12">
 
@@ -155,16 +166,16 @@
                     android:background="#1F000000" />
             </LinearLayout>
 
-
-            <!--        <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btnLoginFacebook"
-                        style="@style/Widget.MaterialComponents.Button"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/lato"
-                        android:text="@string/button_label_facebook"
-                        app:icon="@drawable/ic_input_facebook" />-->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnLoginFacebook"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="32dp"
+                android:fontFamily="@font/lato"
+                android:text="@string/button_label_facebook"
+                app:icon="@drawable/ic_input_facebook" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnLoginGoogle"
@@ -172,8 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginHorizontal="32dp"
                 android:fontFamily="@font/lato"
                 android:text="@string/button_label_google"
                 app:icon="@drawable/ic_input_google" />
@@ -186,42 +196,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:gravity="end"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato"
-                    android:text="@string/text_not_registered"
-                    android:textSize="16sp" />
-
-                <Space
-                    android:layout_width="8dp"
-                    android:layout_height="match_parent" />
-
-                <TextView
-                    android:id="@+id/btnRegister"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato"
-                    android:text="@string/register_text"
-                    android:textColor="@color/textColor"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="8dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginHorizontal="32dp"
                 android:gravity="end"
                 android:orientation="horizontal">
 
