--- a/app/src/main/res/menu/nav_drawer_menu_transport_admin.xml
+++ b/app/src/main/res/menu/nav_drawer_menu_transport_admin.xml
@@ -22,6 +22,11 @@
             android:title="Bookings" />
 
         <item
+            android:id="@+id/btnRentals"
+            android:icon="@drawable/ic_icon_rent"
+            android:title="Rent-a-Van" />
+
+        <item
             android:id="@+id/btnSchedules"
             android:icon="@drawable/ic_icon_schedule"
             android:title="Schedules" />
