--- a/app/src/main/res/drawable/background_schedule_item.xml
+++ b/app/src/main/res/drawable/background_schedule_item.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="-45"
-        android:endColor="@color/white"
+        android:endColor="#1FFFFFFF"
         android:startColor="#80FFFFFF" />
 </shape>
