--- a/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
@@ -14,8 +14,7 @@
         android:clickable="true"
         android:elevation="8dp"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="16dp">
+        android:foreground="?android:attr/selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
