--- a/app/src/main/res/layout/booking_user_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_pending_item_layout.xml
@@ -15,8 +15,7 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="8dp">
+        app:cardCornerRadius="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
